--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,19 @@ header {
   display: flex;
   align-items: center;
   justify-content: center;
-  gap: 20px;
-  padding: 20px;
+  height: 40px;
+  width: 100vw;
+  background-color: #3d405b;
+  color: #81b29a;
+  text-transform: uppercase;
+  font-weight: 700;
+  text-decoration: none;
+}
+
+.navigate,
+.navigate:visited {
+  color: #81b29a;
+  text-transform: uppercase;
+  font-weight: 700;
+  text-decoration: none;
 }
