--- a/src/components/Form/Form.css
+++ b/src/components/Form/Form.css
@@ -1,4 +1,5 @@
 form {
+  color: #3d405b;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -8,4 +9,39 @@ form {
   width: 400px;
   border-radius: 5px;
   margin: 10px;
+  height: 535px;
+}
+
+h2 {
+  margin: -13px;
+}
+
+input[type='number'],
+input[type='text'],
+textarea {
+  background-color: #f4f1de;
+  border-radius: 20px;
+  width: 270px;
+  margin: 5px 20px 0px 20px;
+  border: none;
+  height: 2rem;
+  padding-left: 10px;
+}
+
+textarea {
+  height: 150px;
+  resize: none;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+button {
+  border-radius: 20px;
+  border: none;
+  width: 320px;
+  background-color: #3d405b;
+  color: #f4f1de;
+  height: 2rem;
+  font-size: 1rem;
+  font-weight: 700;
+  padding: 10px;
 }
